# genext2fs

./: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  autogen.sh  build.sh  cache.h  clean.sh  configure  configure.ac  configure.in  dev.txt  device_table.txt  device_table_link.txt  genext2fs  genext2fs.8  genext2fs.c  list.h  make-debian  test-gen.lib  test-mount.sh  test.sh
.github/workflows/: build.yml  ccpp.yml  main.yml
debian/: changelog  control  copyright  rules  watch
debian/patches/: 0001-Enable-system-locale-change-from-the-standard-C-to-s.patch  0002-Skip-if-parent-is-dev.patch  series
debian/tests/: control  general
debian/upstream/: metadata
m4/: ac_func_scanf_can_malloc.m4
release/DEBIAN/: control
